--- a/javascript_drum_kit/index.html
+++ b/javascript_drum_kit/index.html
@@ -59,15 +59,9 @@
   <audio data-key="75" src="sounds/tom.wav"></audio>
   <audio data-key="76" src="sounds/tink.wav"></audio>
 
-  <script>
-    window.addEventListener('keydown', function (e) {
-      const audio = document.querySelector(`audio[data-key="${e.keyCode}"]`);
-      if (!audio) return;
-      console.log(audio);
-      audio.play();
-    });
-  </script
+  <script src=javascript.js>
 
+  </script>
 </body>
 
 </html>
